--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            Páginas
          </button>
                             <div class="dropdown-menu bg-info border-0" aria-labelledby="dropdownMenuButton" ng-repeat="pagina in paginas">
-                                <a class="dropdown-item" href="#">{{paginas[persona]}}</a>
+                                <a class="dropdown-item" href="{{pagina.url}}">{{pagina.pagina}}</a>
                             </div>
                         </div>
                     </li>
