--- a/index.html
+++ b/index.html
@@ -51,20 +51,51 @@
             </div>
         </div>
     </nav>
-    <div class="container slide">
-        <div id="carrusel" class="carousel slide p-0 m-0" data-ride="carousel" data-interval="2000">
-            <div class="carousel-inner rounded" ng-repeat="contx in carruso">
-              <div class="carousel-item {{contx.status}}">
-                <img src="{{contx.src}}" class="img-fluid w-100">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carrusel" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#carrusel" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
+    <div class="container mt-2">
+     <div id="prox" class="carousel slide p-0 m-0" data-ride="carousel" data-interval="3000">
+      <ul class="carousel-indicators">
+       <li data-target="#prox" data-slide-to="0" class="active"></li>
+       <li data-target="#prox" data-slide-to="1"></li>
+       <li data-target="#prox" data-slide-to="2"></li>
+       <li data-target="#prox" data-slide-to="3"></li>
+       <li data-target="#prox" data-slide-to="4"></li>
+       <li data-target="#prox" data-slide-to="5"></li>
+       <li data-target="#prox" data-slide-to="6"></li>
+       <li data-target="#prox" data-slide-to="7"></li>
+      </ul>
+      <div class="carousel-inner rounded">
+        <div class="carousel-item shadow active">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp1884717.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
         </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3390444.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614448.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614454.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614456.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614483.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614485.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+        <div class="carousel-item shadow">
+         <div style="background-image: url('https://wallpapercave.com/wp/wp2670943.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#prox" data-slide="prev">
+       <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#prox" data-slide="next">
+       <span class="carousel-control-next-icon"></span>
+      </a>
+     </div>
     </div>
 </body>
 </html>
