--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-2">
+    <div class="container bg-dark p-0">
      <div id="prox" class="carousel slide p-0 m-0" data-ride="carousel" data-interval="3000">
       <ul class="carousel-indicators">
        <li data-target="#prox" data-slide-to="0" class="active"></li>
