--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <li data-target="#prox" data-slide-to="6"></li>
        <li data-target="#prox" data-slide-to="7"></li>
       </ul>
-      <div class="carousel-inner rounded">
+      <div class="carousel-inner">
         <div class="carousel-item shadow active">
          <div style="background-image: url('https://wallpapercave.com/wp/wp1884717.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
         </div>
