--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
     <script type="text/javascript" src="js/angular.min.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <link href="css/main.css" rel="stylesheet">
     <title>Tienda StarWars</title>
 </head>
 <body ng-controller="SkyWalker">
-    <nav class="navbar navbar-expand-md navbar-dark p-0 shadow-sm" style="background-color:#336699;">
+    <nav class="navbar navbar-expand-md navbar-dark p-0 shadow-sm" style="background-color:#556677;">
         <div class="container bg-info p-2">
-            <a class="navbar-brand font-weight-bold" href="./"><i class="fa fa-play-circle"></i>&nbsp;&nbsp;Tienda StarWars</a>
+            <a class="navbar-brand font-weight-bold" href="./"><h2 class="font-weight-bold"><i class="fa fa-play-circle"></i>&nbsp;&nbsp;Tienda StarWars</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#starwars" aria-controls="starwars" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
@@ -63,28 +65,32 @@
       </ul>
       <div class="carousel-inner">
         <div class="carousel-item shadow active">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp1884717.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp1884717.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
+         <div class="carousel-caption" style="text-shadow: 1px 1px #334455;">
+          <h3 class="font-weight-bold">StarWars</h3>
+          <p>La Venganza del Frijol Negro</p>
+         </div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp3390444.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3390444.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp3614448.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614448.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp3614454.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614454.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp3614456.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614456.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp3614483.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614483.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp3614485.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp3614485.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
         <div class="carousel-item shadow">
-         <div style="background-image: url('https://wallpapercave.com/wp/wp2670943.jpg'); width:100%; height:40vh; background-size: cover;  background-position: center;  background-repeat: no-repeat;"></div>
+         <div style="background-image: url('https://wallpapercave.com/wp/wp2670943.jpg'); width:100%; height:30vh; background-size: cover;  background-position: top center;  background-repeat: no-repeat;"></div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#prox" data-slide="prev">
