--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 </head>
 <body ng-controller="SkyWalker">
     <nav class="navbar navbar-expand-md navbar-dark p-0 shadow-sm" style="background-color:#556677;">
-        <div class="container bg-info p-2">
-            <a class="navbar-brand font-weight-bold" href="./"><h2 class="font-weight-bold"><i class="fa fa-play-circle"></i>&nbsp;&nbsp;Tienda StarWars</h2></a>
+        <div class="container bg-dark p-2">
+            <a class="navbar-brand font-weight-bold" href="./"><h2 class="font-weight-bold"><i class="fa fa-space-shuttle"></i>&nbsp;&nbsp;{{titulo}}</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#starwars" aria-controls="starwars" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
      </button>
             <div class="collapse navbar-collapse justify-content-end float-right" id="starwars">
                 <ul class="navbar-nav m-auto text-light">
                     <li class="nav-item p-2">
-                        <a class="nav-link text-light font-weight-bold" href="./">Inicio</a>
+                        <a class="nav-link text-light font-weight-bold" href="./">{{xhome}}</a>
                     </li>
                     <li class="nav-item p-2">
                         <div class="dropdown">
-                            <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-           StarPedia
+                            <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+           {{xpedia}}
          </button>
-                            <div class="dropdown-menu bg-info border-0 shadow-lg" aria-labelledby="dropdownMenuButton">
-                                <div class="dropdown-item px-2" ng-repeat="paginax in paginas">
-                                    <i class="fa fa-folder" aria-hidden="true"></i><a href="{{paginax.url}}" class="btn">{{paginax.pagina}}</a>
+                            <div class="dropdown-menu bg-dark border-0 shadow-lg" aria-labelledby="dropdownMenuButton">
+                                <div class="dropdown-item px-2 text-warning" ng-repeat="paginax in paginas">
+                                    <i class="fa fa-folder mr-2" aria-hidden="true"></i><a href="{{paginax.url}}" class="text-muted">{{paginax.pagina}}</a>
                                 </div>
                             </div>
                         </div>
